2023-12-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor signal handling (closes: #147)
	  - do not ignore SIGHUP and SIGTERM signals
	  - remove incompletely written database and exit on SIGHUP, SIGTERM
	    or SIGINT
	  - add exit code 25 for signal interruptions
	  - Update SIGNAL HANDLING section of aide.1 manual page
	* Fix compiler warnings for printf style functions

2023-12-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle an incomplete written input database as an error

2023-12-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add '--list' command to list the entries of the database in
	  human-readable format (closes: #9)

2023-11-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix format function attribute for some printf style functions
	* Fix several compiler warnings for printf style functions (closes: #162),
	  thanks to Mingjie Shen <shen497@purdue.edu> for the initial patch

2023-11-17 Mingjie Shen <shen497@purdue.edu>
	* Fix condition for error message of failing to open gzipped files

2023-07-30 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove deprecated config options
	  - 'database' (replaced by 'database_in')
	  - 'summarize_changes' (replaced by 'report_summarize_changes')
	  - 'grouped' (replaced by 'report_grouped')
	* Remove handling of outdated config parameters/option
	* Raise log level for some deprecations

2023-07-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve handling of ACL errors

2023-07-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix double free() during report generation (closes: #157)

2023-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use void for empty function parameter list

2023-07-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update GPG key in SECURITY.md

2023-06-29 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix typo in aide.1 manual page

2023-06-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>