@@ -95,6 +95,9 @@ overwrites the num_workers value set in any configuration file.
 .IP "--no-progress (added in AIDE v0.19)"
 Turn progress off explicitly. By default progress is shown if standard error is
 connected to a terminal.
+.IP "--no-color (added in AIDE v0.19)"
+Turn colored log output off explicitly. By default colored log output is
+enabled if standard error is connected to a terminal.
 .IP "--version,-v"
 Print version information and exit.
 .IP "--help,-h"
