@@ -6,6 +6,7 @@
 	  - add exit code 25 for signal interruptions
 	  - Update SIGNAL HANDLING section of aide.1 manual page
 	* Fix compiler warnings for printf style functions
+	* Add colors to log output (add '--no-color' parameter)
 
 2023-12-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Handle an incomplete written input database as an error
